--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,35 @@
-/*  your css code here. If applicable */
+#section{
+	margin:22px;
+	padding:30px;
+      
+	border: solid 2px red;
+	width:550px;
+	height:200px;
+	background-color: #f5f5f5
+	
+}
+.test{
+/* 	border:2px solid red; */
+	width:560px;
+	height:57px;
+	padding:0px;
+	margin:10px;
+	background:white;
+	
+}
+#s{
+	display:flex;
+	margin:px;
+	padding:px;
+	justify-content:end;
+	color:red;
+	
+	
+}
+#para{
+	color:red;
+	padding:15px;
+	
+	font-size:10px
+	
+}
