--- a/styles.css
+++ b/styles.css
@@ -2,16 +2,16 @@
 	margin:22px;
 	padding:30px;
       
-	border: solid 2px red;
+/* 	border: solid 2px red; */
 	width:550px;
-	height:200px;
+	height:250px;
 	background-color: #f5f5f5
 	
 }
 .test{
 /* 	border:2px solid red; */
 	width:560px;
-	height:57px;
+	height:80px;
 	padding:0px;
 	margin:10px;
 	background:white;
@@ -22,14 +22,15 @@
 	margin:px;
 	padding:px;
 	justify-content:end;
-	color:red;
+	color:black;
 	
 	
 }
 #para{
-	color:red;
+	color:black;
 	padding:15px;
 	
 	font-size:10px
+	
 	
 }
